# sentinel-api-testing

./: .clinerules  .env.template  .gitignore  AUDIT_TRAIL_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPROVEMENTS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION.md  Dockerfile.consciousness  FINAL_ASSESSMENT.md  LICENSE  LLM_PROVIDER_IMPLEMENTATION_PLAN.md  Makefile  PHASE_1.5_COMPLETE.md  PHASE_2.5_COMPLETE.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  README_PHASE2.md  SECURITY.md  TESTING_CONSCIOUSNESS_GUIDE.md  TEST_COVERAGE_PLAN.md  demo_phase2.py  demo_phase3.py  demo_phase3_frontend.py  demo_phase4.py  demo_rbac.py  demo_standalone.py  docker-compose.consciousness.yml  docker-compose.yml  fix_functional_agent.py  monitor_consciousness.sh  ollama_benchmark_10rounds_summary.json  platform-evolution-plan.md  prometheus.yml  run-all-tests.sh  sample-petstore.yaml  start-with-llm.sh  (+6 more)
sentinel_backend/: .env.docker  .env.docker.template  .env.production  CRUD_AUDIT.md  Dockerfile.test  EDGE_CASES_AGENT_SUMMARY.md  PERFORMANCE_ANALYSIS.md  __init__.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  init_database.py  init_db.sql  ollama_config.json  pyproject.toml  pytest.ini  run_agent_tests.sh  run_llm_tests.sh  run_tests.sh  run_tests_filtered.sh  test_all_agents.py  test_backward_compatibility.py  test_positive_agent.py
sentinel_backend/agentdb_service/: Dockerfile  README.md  __init__.py  agentdb_client.py  embedding_service.py  main.py  schemas.py  vector_storage.py
sentinel_backend/alembic/: env.py
sentinel_backend/api_gateway/: Dockerfile  Dockerfile.prod  bff_service.py  main.py
sentinel_backend/audit_service/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  VERIFICATION_RESULTS.md  __init__.py  api.py  emitter.py  integration_example.py  main.py  middleware.py  reports.py  verify_implementation.sh
sentinel_backend/auth_service/: Dockerfile  Dockerfile.prod  app_factory.py  auth_middleware.py  dependencies.py  main.py
sentinel_backend/ci_templates/: Jenkinsfile  github-actions.yml  gitlab-ci.yml
sentinel_backend/cli/: main.py
sentinel_backend/common/: README.md  __init__.py  assertion_registry.py
sentinel_backend/config/: __init__.py  development.env  docker.env  enhanced_tracing_config.py  llm_example.env  local.env  logging_config.py  manage.py  production.env  settings.py  testing.env  tracing_config.py  validation.py
sentinel_backend/data_service/: Dockerfile  Dockerfile.prod  app_factory.py  main.py  models.py  schemas.py
sentinel_backend/docs/: BLOCKER3_SOLUTION.md  EXECUTIVE_SUMMARY.md  README.md  agent-value-assessment.md  analysis-complete.txt  audit_trail_system.md  duplication-analysis.md  implementation-roadmap.md  improvement-recommendations.md  llm-configuration-guide.md  performance-results.md  performance-summary.md  phase2_milestone2_5_complete.md  rust_llm_implementation_summary.md  test-improvements-summary.md  test-refactoring-summary.md
sentinel_backend/examples/: llm_provider_demo.py
sentinel_backend/execution_service/: Dockerfile  Dockerfile.prod  app_factory.py  main.py
sentinel_backend/llm_providers/: __init__.py  base_provider.py  mock_provider.py  model_registry.py  ollama_models.py  ollama_provider.py  provider_factory.py
sentinel_backend/models/: feedback.py
sentinel_backend/observability/: README.md  test_observability.sh
sentinel_backend/orchestration_service/: CORS_SETUP.md  Dockerfile  Dockerfile.prod  INTEGRATION_INSTRUCTIONS.md  agent_performance_tracker.py  app_factory.py  broker.py  feedback_endpoints.py  main.py
sentinel_backend/reasoningbank/: README.md  __init__.py
sentinel_backend/rl_service/: README.md  __init__.py
sentinel_backend/scripts/: README.md  db_diagnostics.py  db_health_check.py  db_quick_check.sh  docker-entrypoint.sh  docker-init-db-sql.sh  docker-init-db.sh  fix_feedback_endpoints.py  fix_feedback_simple.sh  fix_signatures.py  init_db_with_retry.py  migrate_to_agentdb.py  switch_llm.sh  switch_llm_docker.sh  validate_llm_config.py  wait_for_db.sh
sentinel_backend/sentinel_rust_core/: Cargo.toml  Dockerfile  Dockerfile.prod
sentinel_backend/spec_service/: Dockerfile  Dockerfile.prod  app_factory.py  main.py  models.py  (+1 more)
(+752 files in other folders)
