[tool.poetry]
name = "sentinel-backend"
version = "0.1.0"
description = "Backend services for the Sentinel AI Agentic API Testing Platform"
authors = ["Cline"]

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6" # For pgvector, though asyncpg is primary
pgvector = "^0.2.0"
alembic = "^1.11.1" # For database migrations

# API Spec Parsing
prance = "^2.0.0"
openapi-core = "^0.18.0"
pyyaml = "^6.0"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1" # For testing API clients

# Scheduling
schedule = "^1.2.0"

# LLM Interaction (example)
openai = "^0.28.0"

# Authentication & Security
pyjwt = "^2.8.0"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
email-validator = "^2.0.0"

# Configuration Management
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.0.0"}

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
